--- a/electromecanica/SIM/temas/u1/t1_1/historia/mystyle.css
+++ b/electromecanica/SIM/temas/u1/t1_1/historia/mystyle.css
@@ -27,7 +27,7 @@ table {
   }
 .grid-container {
   display: grid;
-  grid-template-columns: 33%;
+  grid-template-columns: 40%;
   margin: 3px;
   justify-content: center; /* centra horizontalmente */
 }
@@ -35,4 +35,7 @@ table {
   padding: 10px;
   margin-top: 1px;
  }
-
+p {
+  font-size: 150%;
+  text-align: justify;
+  }
